--- a/base.css
+++ b/base.css
@@ -106,7 +106,7 @@ section {
   display: block;
 }
 body {
-  background-color: black;/* Add background-color declaration here */
+  background-color: blue;/* Add background-color declaration here */
 }
 ol,
 ul {
